optimize logo and fix yotube height bug on mobile

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ ul{
 }
 .yt-player{  
     position:relative;
-    padding-bottom:36.25%;
+    padding-bottom:46.25%;
     padding-top:30px;
     overflow:hidden;
 }
@@ -137,7 +137,6 @@ footer {
         font-size: 20px;
     }
     .yt-player{
-        padding-bottom:46.25%;
     }
     .yt-player iframe,
     .yt-player object,
